# COVID-19

./: .gitignore  .mapbox_token  README.md  environment.yml  requirements.txt  setup.cfg
data/: county_coords.csv  covid19_dataset.json
notebooks/: learn.ipynb
scripts/: prepare_data.py
src/zzsn2021/: arima_eval.py  main.py
src/zzsn2021/configs/: register.py
src/zzsn2021/configs/experiment/: __init__.py  chickenpox.yaml  covid19.yaml
src/zzsn2021/configs/lightning/: short.yaml
src/zzsn2021/datamodules/: ChickenPoxDataModule.py  Covid19DataModule.py
src/zzsn2021/datasets/: ChickenPoxDataset.py  Covid19Dataset.py
src/zzsn2021/helpers/: DataViewer.py
src/zzsn2021/loaders/: Covid19DatasetLoader.py  CustomChickenpoxDatasetLoader.py
src/zzsn2021/models/: STGCN.py
src/zzsn2021/saved_models/: model.pt
src/zzsn2021/systems/: SpatioTemporalRegressor.py  __init__.py
src/zzsn2021/utils/: rundir.py
