[metadata]
name = zzsn2021-Mlyniec-Belniak
version = attr: zzsn2021.__version__
description = COVID-19 cases prediction based on spatio-temporal convolutional graph neural networks
long_description = file: README.md
author = Michal Belniak, Pawel Mlyniec
author-email = {michal.belniak,pawel.mlyniec}.stud@pw.edu.pl
url = https://github.com/2021L-ZZSN/11-Mlyniec-Belniak
platform = any
keywords = neural networks, COVID-19, graph networks
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
package_dir =
    = src
package_data =
    = py.typed
scripts =
install_requires =
    coolname
    gym
    hydra-configs-pytorch-lightning
    hydra-configs-torch
    hydra-configs-torchvision
    hydra-core
    matplotlib
    pytest
    python-dotenv
    pytorch-lightning
    pytorch-lightning-bolts
    rich
    setproctitle
    torchstat
    torchsummary
    tqdm
    wandb
python_requires = >=3.8

[options.packages.find]
where = src
